sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:7: error: not found: value getvalue
      var v=getvalue(i)
            ^